ambiguous urls fix
