# expense-tracker-backend/src/main/kotlin/matthias/expense_tracker/category/CategoryController.kt
@@ -8,7 +8,7 @@ import org.springframework.web.bind.annotation.*
 
 @CrossOrigin("*")
 @RestController
-@RequestMapping("/categories")
+@RequestMapping("/api/categories")
 internal class CategoryController(private val categoryService: CategoryService) {
 
     @GetMapping
